<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>TDDFramework</groupId>
  <artifactId>TDDFramework</artifactId>
  <version>0.0.1-SNAPSHOT</version>


    <properties>
        <jvm.options>--add-opens java.base/java.lang=ALL-UNNAMED</jvm.options>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>


    <build>


        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>

                    <argLine>${jvm.options}</argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>testing.xml</suiteXmlFile>
                    </suiteXmlFiles>

                </configuration>

            </plugin>






        </plugins>
    </build>
  
   <dependencies>
	 <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
<dependency>
    <groupId>io.appium</groupId>
    <artifactId>java-client</artifactId>
    <version>8.3.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.testng/testng -->
<dependency>
    <groupId>org.testng</groupId>
    <artifactId>testng</artifactId>
    <version>7.7.1</version>
    <scope>test</scope>
</dependency>


<!-- https://mvnrepository.com/artifact/org.json/json -->
<dependency>
    <groupId>org.json</groupId>
    <artifactId>json</artifactId>
    <version>20230227</version>
</dependency>

<!--   	<dependency>-->
<!--   		<groupId>Api_Testing</groupId>-->
<!--   		<artifactId>Api_Testing</artifactId>-->
<!--   		<version>0.0.1-SNAPSHOT</version>-->
<!--   	</dependency>-->
<!--   	<dependency>-->
<!--   		<groupId>com.scrolltest</groupId>-->
<!--   		<artifactId>api1</artifactId>-->
<!--   		<version>0.0.1-SNAPSHOT</version>-->
<!--   	</dependency>-->
   	
   	<dependency>
    <groupId>commons-codec</groupId>
    <artifactId>commons-codec</artifactId>
    <version>1.15</version>
</dependency>




<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
<dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-core</artifactId>
    <version>2.20.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
<dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-api</artifactId>
    <version>2.20.0</version>
</dependency>

 
 
 
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
<dependency>
    <groupId>com.aventstack</groupId>
    <artifactId>extentreports</artifactId>
    <version>4.0.0</version>
</dependency>


<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
<dependency>
    <groupId>com.aventstack</groupId>
    <artifactId>extentreports</artifactId>
    <version>3.1.2</version>
</dependency>


 

   </dependencies>
   
   
   <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->







</project>